replace svg icons by png icons

--- a/example/multi-user-3d-web-experience/server/mml-documents/gaming-station.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/gaming-station.html
@@ -26,11 +26,11 @@
   }
 
   const controlsIcons = new Map([
-    ["play", "/assets/playground/icons_play.svg"],
-    ["pause", "/assets/playground/icons_pause.svg"],
-    ["next", "/assets/playground/icons_next.svg"],
-    ["volume", "/assets/playground/icons_volup.svg"],
-    ["power", "/assets/playground/icons_power.svg"],
+    ["play", "/assets/playground/icons_play.png"],
+    ["pause", "/assets/playground/icons_pause.png"],
+    ["next", "/assets/playground/icons_next.png"],
+    ["volume", "/assets/playground/icons_volup.png"],
+    ["power", "/assets/playground/icons_power.png"],
   ]);
 
   const controls = new Map();
