disables pvp temporarily

--- a/apps/3d-web-experience/server/mml-documents/chess.html
+++ b/apps/3d-web-experience/server/mml-documents/chess.html
@@ -4392,13 +4392,14 @@
   });
   const matchViewer = new MatchViewer(wrapper, engine, renderer, 6, 0, 0, -90);
 
-  const toPvPStart = [-25.5, 31.8, -17.5];
-  const toPvPEnd = [1000, 0, 1000];
+  // const toPvPStart = [-25.5, 31.8, -17.5];
+  // const toPvPEnd = [1000, 0, 1000];
 
-  const backFromPvPStart = [950, 0, 1000];
-  const backFromPvPEnd = [-18.5, 31.8, -17.5];
-  const toPvP = createTeleporter(wrapper, ...toPvPStart, ...toPvPEnd);
-  const backFromPvP = createTeleporter(wrapper, ...backFromPvPStart, ...backFromPvPEnd);
+  // const backFromPvPStart = [950, 0, 1000];
+  // const backFromPvPEnd = [-18.5, 31.8, -17.5];
 
-  const pvp = new PlayerVsPlayer(pvpWrapper);
+  // const toPvP = createTeleporter(wrapper, ...toPvPStart, ...toPvPEnd);
+  // const backFromPvP = createTeleporter(wrapper, ...backFromPvPStart, ...backFromPvPEnd);
+
+  // const pvp = new PlayerVsPlayer(pvpWrapper);
 </script>
