removes rogue debug vis

--- a/apps/3d-web-experience/server/mml-documents/jukebox.html
+++ b/apps/3d-web-experience/server/mml-documents/jukebox.html
@@ -211,7 +211,7 @@
 
     const audio = document.createElement("m-audio");
     audio.setAttribute("id", "jukebox-audio");
-    audio.setAttribute("debug", true);
+    audio.setAttribute("debug", false);
     audio.setAttribute("volume", 0);
     audio.setAttribute("cone-angle", 120);
     audio.setAttribute("cone-falloff-angle", 170);
